src/objects/iPad_Sync_Log__c.object
<CustomObject>
    <description>Stores Ipad Sync Logs</description>
    <fields>
        <fullName>Connection_Type__c</fullName>
        <label>Connection Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sync_End_Time__c</fullName>
        <label>Sync End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sync_Start_Time__c</fullName>
        <label>Sync Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sync_Time__c</fullName>
        <label>Sync Time</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_Type__c</fullName>
        <label>Sync Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iOS_Version__c</fullName>
        <label>iOS Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPad_App_Version__c</fullName>
        <label>iPad App Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPad_Type__c</fullName>
        <label>iPad Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPad_Version__c</fullName>
        <label>iPad Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>iPad Sync Log</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>iPad Sync Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iPad Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>